--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,32 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.fleks {
+display: flex;
+width: 100%;
+height: 100%;
+flex-direction: row;
+justify-content: space-around;
+margin-top: 100px;
+
+
+
+}
+.projekat{
+    width: 400px;
+    height: auto;
+    border: 1px solid black;
+    background-color: yellow;
+
+
+
+}
+.slpro{
+
+width: 100%; 
+height: auto;
+}
+.naspro{ text-align: center;
+margin-top: 80px;
+}
